[package]
name = "scrapinghub_exporter"
version = "0.1.0"
authors = ["Huseyin Yilmaz <yilmazhuseyin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = {version = "0.2", features = ["compression"]}
reqwest = {version = "0.10.8", default-features = false, features = ["rustls-tls", "json"]} # remove openssl dependency from reqwest.
log = "0.4"
pretty_env_logger = "0.4"
config = "0.10.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.13"
futures = "0.3.7"
